# NightingaleEngine

./: CMakeLists.txt  README.md
include/: nightingale.hpp
include/audio/: audio_player.hpp
include/content/: content_loader.hpp  content_types.hpp
include/ecs/: component.hpp  entity.hpp  render_system.hpp  system.hpp
include/game_states/: game_mode.hpp
include/graphics/: color.hpp  default_shaders.hpp  graphics_interface.hpp
include/graphics/2d/: camera2d.hpp  sprite.hpp  spritefont.hpp  vertex.hpp
include/graphics/particles/: particle.hpp  particle_generator.hpp
include/sdl/: input_handler.hpp  nightingale_typedefs.hpp  window.hpp
include/state_machines/: fsm.hpp  pushdown_automaton.hpp
include/utils/: game_watch.hpp  logger.hpp  params.hpp  rwlock.hpp
shaders/: default_font.frag  default_font.vert  default_shader.frag  default_shader.vert
src/: nightingale.cpp
src/audio/: audio_player.cpp
src/content/: content_loader.cpp  font.cpp  music.cpp  sound_effect.cpp  spritesheet.cpp  texture2d.cpp
src/ecs/: entity.cpp  system.cpp
src/game_states/: game_mode.cpp
src/graphics/: color.cpp  graphics_interface.cpp
src/graphics/2d/: camera2d.cpp  sprite.cpp  spritefont.cpp
src/graphics/particles/: particle_generator.cpp
src/sdl/: input_handler.cpp  window.cpp
src/state_machines/: fsm.cpp  pushdown_automaton.cpp
src/utils/: game_watch.cpp  logger.cpp
test/ecs/: component_test.cpp  entity_test.cpp  system_test.cpp
test/game_states/: game_mode_test.cpp
test/state_machines/: fsm_test.cpp  pushdown_automaton_test.cpp
test/utils/: rwlock_test.cpp
